<resources>
	<string name="app_name">Heidi</string>
	<string name="langSelectorTitle">Heidis SwissTrip</string>
	
	<string name="langEnglish">English</string>
	<string name="langGerman">Deutsch</string>
	<string name="langFrench">Francais</string>
	<string name="langItalian">Italiano</string>
	
	<string name="categoryChooserTitle">SELECT CATEGORY</string>
	
	<string name="resultRightText">Richtig!</string>
	<string name="resultWrongText">Falsch!</string>
	
	<string name="dialogBadAnswerTitle">Aww!</string>
	<string name="dialogBadAnswerText">The answer is wrong, please repeate the whole section.</string>
	<string name="dialogBadAnswerButton">OK, I got it\u2026</string>
	
	<string name="dialogPicSelectionSuccessTitle">Congratulation!</string>
	<string name="dialogPicSelectionSuccessText">You\'ve picked up every single image, keep up the good work!</string>
	<string name="dialogPicSelectionSuccessButton">Thanks!</string>
	
	<string name="storyNextPageText">next</string>
	<string name="storyLastPageText">last</string>
	<string name="storyPreviousPageText">previous</string>
	<string name="storyFirstPageText">first</string>
	
	<string name="picSelectResultsTitle">Results:</string>
	<string name="picSelectPointsText">%d points</string>
</resources>
